tdf#91417: import hyperlink with history flag correctly

ignore '\h' flag in hyperlinks imported from docx
including import test

Change-Id: I512e811050704f118bf9b2c786378f99e5d04378